# dynamic-amm-sdk

./: Cargo.toml
dynamic-amm-quote/: Cargo.toml
programs/dynamic-amm/: Cargo.toml
programs/dynamic-amm/src/instructions/: initialize_customizable_permissionless_constant_product_pool.rs
programs/dynamic-vault/: Cargo.toml
rust-client/: Cargo.toml
ts-client/: package.json
