[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
anchor-client = "0.31.0"
clap = { version = "3.2.25", features = ["derive", "env"] }
solana-rpc-client = { version = "2.1.0" }
solana-sdk = { version = "2.1.0" }
spl-associated-token-account = "6.0.0"
anyhow = "1.0.57"
spl-token = "7.0.0"
bincode="1.3.3"
serde = "1.0.137"
serde_json = "1.0.102"
mpl-token-metadata = "5.1.0"
prog_dynamic_amm={path="../programs/dynamic-amm", package="dynamic-amm"}
prog_dynamic_vault={path="../programs/dynamic-vault", package="dynamic-vault"}
regex = "1"
dynamic-amm-quote={path="../dynamic-amm-quote"}